--- a/_config.yml
+++ b/_config.yml
@@ -6,13 +6,12 @@ description: > # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 permalink: ':title/'
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://woobb.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-
+url: "https://woobb.github.io" # the base hostname & protocol for your site, e.g. http://example.comreaaaㄱ
 # Banner settings
 video: mountains.mp4 # add banner video. Add your video file to the folder video
 banner-title: # add banner title
 banner-desc: # add banner description
-
+remote_theme: artemsheludko/bef
 # Author settings
 author-pic: face.jpg # your photo
 author-name: # your name
