--- a/_config.yml
+++ b/_config.yml
@@ -14,19 +14,19 @@ banner-desc: Please do anything. -woobin Kim
 remote_theme: artemsheludko/bef
 # Author settings
 author-pic: face.jpg # your photo
-author-name: # your name
-about-author: # about author
-email: your-email@domain.com # your email
-phone: (496)-169-6557 # your pnone number
-website: https://dwayne.example.com # you website
+author-name: 김우빈. Woobin Kim.
+about-author: 이거맞나
+email: dnqls16123@naver.com 
+phone: 010-6710-1623
+website: https://woobb.github.io
 
 # Social link
 google_url:    # add url link
-twitter_url:   # add url link
+twitter_url: null
 instagram_url: # add url link
-pinterest_url: # add url link
-dribbble_url:  # add url link
-facebook_url:  # add url link
+pinterest_url: null
+dribbble_url:  null
+facebook_url:  null
 
 # Disqus
 discus_identifier: mr-brown # add your discus identifier.  Not your username.  To get this, register your forum here with a unique ID: https://disqus.com/admin/create/
