--- a/_config.yml
+++ b/_config.yml
@@ -10,12 +10,12 @@ url: "https://woobb.github.io" # the base hostname & protocol for your site, e.g
 # Banner settings
 video: mountains.mp4 # add banner video. Add your video file to the folder video
 banner-title: Employment War 
-banner-desc: Please do anything. -woobin Kim 
+banner-desc: employment war라 쓰고 복습&취업용 블로그라 읽는다..
 remote_theme: artemsheludko/bef
 # Author settings
 author-pic: face.jpg # your photo
 author-name: 김우빈. Woobin Kim.
-about-author: 이거맞나
+about-author: 사진본인임 ㅋㅋ
 email: dnqls16123@naver.com 
 phone: 010-6710-1623
 website: https://woobb.github.io
