--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ remote_theme: artemsheludko/bef
 # Author settings
 author-pic: face.jpg # your photo
 author-name: 김우빈. Woobin Kim.
-about-author: 공부는 나랑 안맞다
+about-author: 취업하자^^
 email: dnqls16123@naver.com 
 phone: 010-6710-1623
 website: https://woobb.github.io
